# CoughViT

./: .gitignore  README.md  pyproject.toml
experiments/: ast-segmentation.csv  coughvit-segmentation.csv  wet-dry-ast.csv  wet-dry-coughvit.csv
experiments/ast-audioset/coughvid/: coughvid.txt  fold-0-log.json  fold-1-log.json  fold-2-log.json  fold-3-log.json  fold-4-log.json
experiments/ast-audioset/d2/: fold_0.json  fold_1.json  fold_2.json  fold_3.json  fold_4.json  results.txt
experiments/ast-audioset/detection/: detection.txt  fold-0-log.json  fold-1-log.json  fold-2-log.json  fold-3-log.json  fold-4-log.json
experiments/ast-base/coughvid/: coughvid.txt  fold-0-log.json  fold-1-log.json  fold-2-log.json  fold-3-log.json  fold-4-log.json
experiments/ast-base/d2/: fold_0.json  fold_1.json  fold_2.json  fold_3.json  fold_4.json  results.txt
experiments/ast-base/detection/: detection.txt  fold-0-log.json  fold-1-log.json  fold-2-log.json  fold-3-log.json  fold-4-log.json
experiments/ast-c19s/coughvid/: coughvid.txt  fold-0-log.json  fold-1-log.json  fold-2-log.json  fold-3-log.json  fold-4-log.json
experiments/ast-c19s/d2/: fold_0.json  fold_1.json  fold_2.json  fold_3.json  fold_4.json  results.txt
experiments/ast-c19s/detection/: detection.txt  fold-0-log.json  (+4 more)
tests/: test_utils.py
tests/cough_detection/: test_datasets.py
thesis/: constants.py  experiments.py  models.py  spec.py  utils.py
thesis/c19sounds/: datasets.py
thesis/cough_detection/: datasets.py
thesis/coughvid/: datasets.py
thesis/dicova2/: datasets.py  utils.py
(+450 files in other folders)
