[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
torchaudio = "^2.0.2"
pandas = "^2.0.3"
transformers = {extras = ["torch"], version = "^4.30.2"}
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
torchmetrics = "^1.0.1"
matplotlib = "^3.7.2"
datasets = {extras = ["audio"], version = "^2.13.1"}
llvmlite = "^0.40.1"
timm = "^0.9.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
nvidia-ml-py3 = "^7.352.0"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
